Actions
Bug #10827
closedsome symbols have the wrong CTF type
Start date:
2019-04-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
http://smartos.org/bugview/OS-7713
While comparing GCC4 versus GCC7 CTF, I noticed something odd:
-extern attr_info_t cb_procnames_long56;
-extern attr_info_t cb_procnames_short56;
...
+extern char *cb_procnames_long2;
+extern char *cb_procnames_short2;
In the GCC 4 build, we are incorrectly assigning the type. These are arrays of string pointers in snoop_nfs4.c
Updated by Electric Monk about 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 5215e75068b0ff78c8961f6cb4607c3659403cda
commit 5215e75068b0ff78c8961f6cb4607c3659403cda Author: John Levon <john.levon@joyent.com> Date: 2019-05-03T09:15:58.000Z 10827 some symbols have the wrong CTF type Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Serapheim Dimitropoulos <serapheim.dimitro@delphix.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions