10827 some symbols have the wrong CTF type Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Serapheim Dimitropoulos <serapheim.dimitro@delphix.com> Approved by: Gordon Ross <gwr@nexenta.com>